# GasLeap

./: .env.docker  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  DEMO_SETUP.md  DEVELOPMENT.md  DOCKER_DEVELOPMENT.md  ENVIRONMENT.md  JUDGE_SETUP.md  Makefile  README.md  TROUBLESHOOTING.md  demo-compose.yml  demo-setup.sh  docker-compose.dev.yml  docker-compose.yml  run-tests.sh
backend/: Dockerfile.api
backend/api/: package.json  server.js
docker/: Dockerfile.demo  Dockerfile.dev  Dockerfile.frontend  Dockerfile.node  Dockerfile.test
docker/mock-parachain/: Dockerfile  package.json  server.js
docker/nginx/: nginx.conf
docker/nginx/conf.d/: gasleap.conf
docker/parachains/: acala-local-spec.json  astar-local-spec.json  gasleap-parachain-spec.json
docker/pgadmin/: servers.json
docker/postgres/: init.sql
docker/relay-chain/: relay-chain-spec.json
docker/scripts/: Dockerfile.seeder  package.json  seed-demo-data.js  seed-demo-data.sh  setup-demo-chains.sh  setup-local-chains.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: GasSavingsCounter.tsx  Header.tsx
frontend/src/contexts/: GasLeapContext.tsx
frontend/src/pages/: DeFiLiquidityPage.tsx  HomePage.tsx  NFTMintPage.tsx
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/sponsorship/: Cargo.toml
pallets/sponsorship/rpc/runtime-api/: Cargo.toml
pallets/sponsorship/rpc/runtime-api/src/: lib.rs
pallets/sponsorship/src/: benchmarking.rs  lib.rs  mock.rs  rpc.rs  tests.rs  weights.rs  xcm_gateway.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: automated-demo.js  optimize-demo-performance.sh  record-demo.sh  reset-demo-state.sh  setup-demo-integration.sh  test-end-to-end.js  validate-demo-setup.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: demo-sdk.ts  hooks.ts  index.ts  sdk.ts  types.ts  utils.ts
