[package]
name = "gasleap-runtime"
version = "4.0.0-dev"
description = "GasLeap parachain runtime for cross-chain gas sponsorship"
authors = ["GasLeap Team"]
homepage = "https://gasleap.dev"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/gasleap/gasleap/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[dependencies]
codec = { workspace = true, features = ["derive"] }
hex-literal = { workspace = true, optional = true }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }

# Local
pallet-sponsorship = { path = "../pallets/sponsorship", default-features = false }
gasleap-sponsorship-rpc-runtime-api = { path = "../pallets/sponsorship/rpc/runtime-api", default-features = false }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# Polkadot
pallet-xcm = { workspace = true }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v1.0.0" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v1.0.0" }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v1.0.0" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v1.0.0" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v1.0.0" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v1.0.0", version = "3.0.0" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v1.0.0" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v1.0.0" }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v1.0.0" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v1.0.0" }
pallet-collator-selection = { workspace = true }
parachain-info = { workspace = true }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-grandpa/std",
	"pallet-sponsorship/std",
	"gasleap-sponsorship-rpc-runtime-api/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sponsorship/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sponsorship/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
]